--- a/pandas_practice.ipynb
+++ b/pandas_practice.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5504006d",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List of High Schools\n",
       "{'High School': 'Griffin', 'Type': 'District'}\n",
       "{'High School': 'Figueroa', 'Type': 'District'}\n",
       "{'High School': 'Wilson', 'Type': 'Charter'}\n",
@@ -109,7 +108,7 @@
    ],
    "source": [
     "#print just the dictionay contents without wrapper\n",
-    "print(\"List of High Schools\")\n",
+    "#print(\"List of High Schools\")\n",
     "for school in high_school_types:\n",
     "    print(school)"
    ]
