completed the school summary

--- a/function.ipynb
+++ b/function.ipynb
@@ -275,8 +275,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "88b2d837",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passing_math_count = 29370\n",
+    "total_student_count = 39170"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "003cabd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function that calculates the percentage of students that passed both # math and reading and prints the passing percentage to the output when the\n",
+    "# function is called.\n",
+    "def passing_math_percent(passing_math_count, total_student_count):\n",
+    "    return passing_math_count / float(total_student_count) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7d090fb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.9808526933878"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Call the function.\n",
+    "passing_math_percent(passing_math_count, total_student_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64e10267",
    "metadata": {},
    "outputs": [],
    "source": []
