Updating with analysis

--- a/PyCitySchool_Challenge.ipynb
+++ b/PyCitySchool_Challenge.ipynb
@@ -236,12 +236,12 @@
    "source": [
     "#  Step 3. Refactor the code in Step 2 to replace the math scores with NaN.\n",
     "# Step 2. Use the loc method on the student_data_df to select all the reading scores from the 9th grade at Thomas High School and replace them with NaN.\n",
-    "student_data_df.loc[(student_data_df[\"grade\"] == \"9th\") & (student_data_df[\"school_name\"] == \"Thomas High School\"),[\"math_score\"]] = np.nan"
+    "student_data_df.loc[(student_data_df[\"grade\"] == \"9th\") & (student_data_df[\"school_name\"] == \"Thomas High School\"), [\"math_score\"]] = np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "id": "7532df25",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
        "[39170 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,10 +2277,11 @@
     "# Step 12. Replace the passing math percent for Thomas High School in the per_school_summary_df.\n",
     "\n",
     "#per_school_summary_df = \n",
+    "#this below line is what works\n",
     "per_school_summary_df.loc[per_school_summary_df.index[12],[\"% Passing Math\"]] = student_count_THS_1012_pass_math\n",
-    "\n",
+    "#per_school_summary_df.loc[per_school_summary_df.index[\"Thomas High School\"],[\"% Passing Math\"]] = student_count_THS_1012_pass_math\n",
     "#school_data_complete_df = school_data_complete_df.loc[(school_data_complete_df[\"grade\"] != \"9th\") & (school_data_complete_df[\"school_name\"] ==\"Thomas High School\")].count()[\"student_name\"]\n",
-    "\n",
+    "# try using a for loop to find the index\n",
     "\n",
     "#per_school_summary_df.index == [\"Thomas High School\"].replace([\"% Passing Math\"],student_count_THS_1012_pass_math)\n",
     "#per_school_summary_df"
