Updated analysis readme

--- a/PyCitySchool_Challenge_testing_backup.ipynb
+++ b/PyCitySchool_Challenge_testing_backup.ipynb
@@ -10,7 +10,8 @@
     "#add dependency\n",
     "import pandas as pd\n",
     "import os\n",
-    "import csv"
+    "import csv\n",
+    "import numpy as np"
    ]
   },
   {
@@ -1782,7 +1783,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "9ea8dc12",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
